// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiLoadingChart is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiLoadingChart testClass1 testClass2 ouiLoadingChart--medium"
  data-test-subj="test subject string"
>
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
</span>
`;

exports[`OuiLoadingChart mono is rendered 1`] = `
<span
  class="ouiLoadingChart ouiLoadingChart--mono ouiLoadingChart--medium"
>
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
</span>
`;

exports[`OuiLoadingChart size l is rendered 1`] = `
<span
  class="ouiLoadingChart ouiLoadingChart--large"
>
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
</span>
`;

exports[`OuiLoadingChart size m is rendered 1`] = `
<span
  class="ouiLoadingChart ouiLoadingChart--medium"
>
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
</span>
`;

exports[`OuiLoadingChart size xl is rendered 1`] = `
<span
  class="ouiLoadingChart ouiLoadingChart--xLarge"
>
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
  <span
    class="ouiLoadingChart__bar"
  />
</span>
`;
